# python-codemode-mcp

./: .gitignore  Acknowledgements.md  LICENSE  README.md  pyproject.toml  unified_mcp_server.py
docs/: ARCHITECTURE.md  LLM_INSTRUCTIONS.md
skills/: __init__.py  read-and-speak.py
tools/: __init__.py  codemode.py  iterm2.py  osascript.py
utils/: __init__.py  config.py  logger.py  osascript_runner.py
