[project]
name = "python-codemode-mcp"
version = "0.1.0"
description = "A Python adaptation of the Code Mode MCP pattern for local agent stacks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", "utils", "skills"]

[project.urls]
"Homepage" = "https://github.com/stridentsoundworks-spec/python-codemode-mcp"
"Blog Post" = "https://blog.cloudflare.com/code-mode-mcp/"
